@@ -213,6 +213,7 @@
 				<version>4.5.0.0</version>
 				<configuration>
 					<effort>Max</effort>
+					<fork>false</fork>
 					<includeTests>true</includeTests>
 					<threshold>Low</threshold>
 				</configuration>
@@ -271,6 +272,32 @@
 				<maven.compiler.target>7</maven.compiler.target>
 				<maven.compiler.release>7</maven.compiler.release>
 			</properties>
+		</profile>
+		<profile>
+			<id>add-opens</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<configuration>
+								<argLine>
+									@{argLine}
+									--add-opens java.base/java.lang=ALL-UNNAMED
+									--add-opens java.base/java.net=ALL-UNNAMED
+									--add-opens java.base/java.io=ALL-UNNAMED
+									--add-opens java.base/java.util=ALL-UNNAMED
+									--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+								</argLine>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
 		</profile>
 	</profiles>
 </project>
